--- a/Tutorials/Day_1/Tuto_1.2_Open_Data_access_with_GWpy.ipynb
+++ b/Tutorials/Day_1/Tuto_1.2_Open_Data_access_with_GWpy.ipynb
@@ -22,7 +22,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": 2,
       "metadata": {
         "id": "oPSkkS9a6jRt"
       },
@@ -57,7 +57,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 4,
       "metadata": {
         "Collapsed": "false",
         "id": "RDmzrP5yvvWx"
@@ -65,7 +65,7 @@
       "outputs": [],
       "source": [
         "# -- Uncomment following line if running in Google Colab\n",
-        "#! pip install -q 'gwpy==3.0.12'"
+        "! pip install -q 'gwpy==3.0.12'"
       ]
     },
     {
@@ -80,15 +80,18 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 5,
       "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
         "id": "GCKbnWoO6jR2",
-        "outputId": "8c494811-9dcb-4576-aea6-b31945cda9ed"
+        "outputId": "dd2fcfdb-8f71-4b49-b775-68ade93ee7b7"
       },
       "outputs": [
         {
-          "name": "stdout",
           "output_type": "stream",
+          "name": "stdout",
           "text": [
             "3.0.12\n"
           ]
@@ -145,20 +148,19 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 6,
       "metadata": {
         "Collapsed": "false",
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 35
+          "base_uri": "https://localhost:8080/"
         },
         "id": "lPUz-bGEvvXD",
-        "outputId": "e35356cb-fe05-4011-a878-e83ea6339e41"
+        "outputId": "8d02a78b-82ee-4bb9-ba37-933bacd387d7"
       },
       "outputs": [
         {
-          "name": "stdout",
           "output_type": "stream",
+          "name": "stdout",
           "text": [
             "1239082262.1\n"
           ]
@@ -226,23 +228,20 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 10,
       "metadata": {
         "Collapsed": "false",
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 191
+          "base_uri": "https://localhost:8080/"
         },
         "id": "KNyXDc6GvvXP",
-        "outputId": "4212d6fd-ddad-4026-bb46-804bb12dc8ef"
+        "outputId": "8fcc50ed-4e3b-426c-e859-a9b5c2098a80"
       },
       "outputs": [
         {
-          "name": "stdout",
           "output_type": "stream",
+          "name": "stdout",
           "text": [
-            "Fetched 1 URLs from gwosc.org for [1239082257 .. 1239082267))\n",
-            "Reading data... [Done]\n",
             "TimeSeries([-8.42597565e-19, -8.52437103e-19, -8.60738804e-19,\n",
             "            ...,  1.38850270e-19,  1.37760541e-19,\n",
             "             1.38094202e-19]\n",
@@ -256,7 +255,7 @@
       ],
       "source": [
         "from gwpy.timeseries import TimeSeries\n",
-        "ldata = TimeSeries.fetch_open_data('L1', *segment, verbose=True)\n",
+        "ldata = TimeSeries.fetch_open_data('L1', *segment, cache=True)\n",
         "print(ldata)"
       ]
     },
