--- a/Tutorials/Day_1/Tuto_1.2_Open_Data_access_with_GWpy.ipynb
+++ b/Tutorials/Day_1/Tuto_1.2_Open_Data_access_with_GWpy.ipynb
@@ -22,9 +22,9 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": null,
       "metadata": {
-        "id": "oPSkkS9a6jRt"
+        "id": "0Murnaoh-pxY"
       },
       "outputs": [],
       "source": [
@@ -57,7 +57,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": null,
       "metadata": {
         "Collapsed": "false",
         "id": "RDmzrP5yvvWx"
@@ -65,7 +65,7 @@
       "outputs": [],
       "source": [
         "# -- Uncomment following line if running in Google Colab\n",
-        "! pip install -q 'gwpy==3.0.12'"
+        "#! pip install -q 'gwpy==3.0.12'"
       ]
     },
     {
@@ -80,18 +80,15 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": null,
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "GCKbnWoO6jR2",
-        "outputId": "dd2fcfdb-8f71-4b49-b775-68ade93ee7b7"
+        "id": "azUl19rj-pxi",
+        "outputId": "c21141ac-766a-4811-9ea1-47dbf160064b"
       },
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "3.0.12\n"
           ]
@@ -148,19 +145,20 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": null,
       "metadata": {
         "Collapsed": "false",
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "base_uri": "https://localhost:8080/",
+          "height": 35
         },
         "id": "lPUz-bGEvvXD",
-        "outputId": "8d02a78b-82ee-4bb9-ba37-933bacd387d7"
+        "outputId": "e35356cb-fe05-4011-a878-e83ea6339e41"
       },
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "1239082262.1\n"
           ]
@@ -228,20 +226,23 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": null,
       "metadata": {
         "Collapsed": "false",
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "base_uri": "https://localhost:8080/",
+          "height": 191
         },
         "id": "KNyXDc6GvvXP",
-        "outputId": "8fcc50ed-4e3b-426c-e859-a9b5c2098a80"
+        "outputId": "4212d6fd-ddad-4026-bb46-804bb12dc8ef"
       },
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
+            "Fetched 1 URLs from gwosc.org for [1239082257 .. 1239082267))\n",
+            "Reading data... [Done]\n",
             "TimeSeries([-8.42597565e-19, -8.52437103e-19, -8.60738804e-19,\n",
             "            ...,  1.38850270e-19,  1.37760541e-19,\n",
             "             1.38094202e-19]\n",
@@ -255,7 +256,8 @@
       ],
       "source": [
         "from gwpy.timeseries import TimeSeries\n",
-        "ldata = TimeSeries.fetch_open_data('L1', *segment, cache=True)\n",
+        "ldata = TimeSeries.fetch_open_data('L1', *segment, verbose=True)\n",
+        "ldata = TimeSeries.fetch_open_data('L1', *segment, verbose=True)\n",
         "print(ldata)"
       ]
     },
@@ -304,7 +306,7 @@
       "cell_type": "markdown",
       "metadata": {
         "Collapsed": "false",
-        "id": "qzjn8weJ6jSE"
+        "id": "asZceXyq-px2"
       },
       "source": [
         "Matplotlib documentation can be found [here](https://matplotlib.org/stable/users/index.html)."
@@ -569,7 +571,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "sfDJX2g26jSR"
+        "id": "NkAN3S4F-pyI"
       },
       "source": [
         "Let's customize this figure by zooming in the frequency range of interest, that is, above the seismic noise shoulder at 10 Hz and below the cut-off at the Nyquist frequency, and resizing the y-axis accordingly."
@@ -735,7 +737,7 @@
       "cell_type": "markdown",
       "metadata": {
         "Collapsed": "false",
-        "id": "Bt-Sergn6jSo"
+        "id": "UDNxaRWl-pyh"
       },
       "source": [
         "# Challenges:"
@@ -758,7 +760,7 @@
       "execution_count": null,
       "metadata": {
         "Collapsed": "false",
-        "id": "zG7fXEQO6jSq"
+        "id": "FGIo9-kf-pyj"
       },
       "outputs": [],
       "source": []
@@ -767,7 +769,7 @@
       "cell_type": "markdown",
       "metadata": {
         "Collapsed": "false",
-        "id": "Nerkj5Eg6jSr"
+        "id": "gt2bgR_B-pyl"
       },
       "source": [
         "## Quiz Question 2 :\n",
@@ -780,7 +782,7 @@
       "execution_count": null,
       "metadata": {
         "Collapsed": "false",
-        "id": "7x72XX4Y6jSs"
+        "id": "coN253A3-pym"
       },
       "outputs": [],
       "source": []
